# gtksourceview-sharp

./: ChangeLog  Makefile.am  configure.in  csharp.lang  gtksourceview-sharp-2.0.pc.in  gtksourceview-sharp.keys  gtksourceview-sharp.mime  gtksourceview-sharp.pc  gtksourceview-sharp.pc.in  makefile.am  nemerle.lang
doc/: Makefile.am  gtksourceview-sharp-docs.source
doc/en/GtkSourceView/: Global.xml  SourceBuffer.xml  SourceLanguage.xml  SourceLanguagesManager.xml  SourceMarker.xml  SourcePrintJob.xml  SourceRegex.xml  SourceStyleScheme.xml  SourceTag.xml  SourceTagStyle.xml  SourceTagTable.xml  SourceUndoManager.xml  SourceView.xml
gtksourceview/: .cvsignore  AssemblyInfo.cs.in  Gtk.metadata  GtkSourceView.cs  Makefile.am  SourceBuffer.custom  SourceLanguagesManager.custom  SourcePrintJob.custom  SourceStyleSchemeAdapter.custom  gtksourceview-api.raw  gtksourceview-api.xml  makefile.am
sample/: Makefile.am  PrintSample.cs
sources/: .cvsignore  gtksourceview-sharp-sources.xml  makefile
