AC_INIT(README)
AC_CANONICAL_SYSTEM
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE(gtksourceview-sharp, 0.2)
AM_MAINTAINER_MODE

dnl Defines CC to avoid warnings
AC_PROG_INSTALL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkg-config' is not in your PATH.])
fi

AC_PATH_PROG(MONO, mono, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['mono' is not in your PATH.])
fi
AC_SUBST(MONO)

PKG_CHECK_MODULES(MONO, mono >= 0.30)
AC_SUBST(MONO_CFLAGS)
AC_SUBST(MONO_LIBS)

PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.17)
gtksharp_prefix=`pkg-config --variable=prefix gtk-sharp`
AC_SUBST(GTK_SHARP_CFLAGS)
AC_SUBST(GTK_SHARP_LIBS)
AC_SUBST(gtksharp_prefix)

PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-1.0 >= 0.7.0)
AC_SUBST(GTKSOURCEVIEW_CFLAGS)
AC_SUBST(GTKSOURCEVIEW_LIBS)
gtksourceview_prefix=`pkg-config --variable=prefix gtksourceview-1.0`
AC_SUBST(gtksourceview_prefix)

AC_PATH_PROG(MCS, mcs, no)
if test "x$MCS" = "xno"; then
	AC_MSG_CHECKING(for mcs.exe)
	MCS=`which mcs.exe 2> /dev/null`
	if test "x$MCS" = "xno" ; then
		AC_MSG_ERROR(['mcs'/'mcs.exe' not found.])
	fi
	AC_MSG_RESULT($MCS)
	MCS="$MONO $MCS"
fi
AC_SUBST(MCS)

AC_PATH_PROG(GAPI_FIXUP, gapi-fixup, no)
if test "x$GAPI_FIXUP" = "xno"; then
	AC_MSG_CHECKING(for gapi-fixup.exe)
	GAPI_FIXUP=`which gapi-fixup.exe 2> /dev/null`
	if test "x$GAPI_FIXUP" = "xno" ; then
		AC_MSG_ERROR(['gapi_fixup'/'gapi-fixup.exe' not found.])
	fi
	AC_MSG_RESULT($GAPI_FIXUP)
	GAPI_FIXUP="$MONO $GAPI_FIXUP"
fi
AC_SUBST(GAPI_FIXUP)

AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
if test "x$GAPI_CODEGEN" = "xno"; then
	AC_MSG_CHECKING(for gapi_codegen.exe)
	GAPI_CODEGEN=`which gapi_codegen.exe 2> /dev/null`
	if test "x$GAPI_CODEGEN" = "xno" ; then
		AC_MSG_ERROR(['gapi-codegen'/'gapi_codegen.exe' not found.])
	fi
	AC_MSG_RESULT([$GAPI_CODEGEN])
	GAPI_CODEGEN="$MONO $GAPI_CODEGEN"
fi
AC_SUBST(GAPI_CODEGEN)

AC_OUTPUT([
makefile
gtksourceview/makefile
gtksourceview-sharp.pc
])
